--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,3 +20,7 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+
+[[constraint]]
+  name = "github.com/newrelic/go-agent"
+  version = "1.9.0"
