--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,3 +24,7 @@
 [[constraint]]
   name = "github.com/newrelic/go-agent"
   version = "1.9.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/grpc-ecosystem/go-grpc-middleware"
