--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,7 +23,7 @@
 
 [[constraint]]
   name = "github.com/newrelic/go-agent"
-  version = "1.9.0"
+  version = "^1.0.0"
 
 [[constraint]]
   branch = "master"
