--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/grpc-ecosystem/go-grpc-middleware"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/izumin5210/newrelic-contrib-go"
