--- a/.travis.yml
+++ b/.travis.yml
@@ -3,29 +3,33 @@ language: go
 matrix:
   include:
   - go: "1.9"
+    env:
+    - DEP_ENABLED=1
   - go: "1.10"
-    env: COVERAGE_ENABLED=1
+    env:
+    - DEP_ENABLED=1
+  - go: "1.11"
+    env:
+    - GO111MODULE=on
 
 cache:
   directories:
-  - vendor
   - $GOPATH/pkg/dep
+  - $GOPATH/pkg/mod
 
 before_install:
-- go get -u github.com/golang/dep/cmd/dep
 - go get -u github.com/golang/lint/golint
+- |
+  if [ "$DEP_ENABLED" = 1 ]; then
+    go get -u github.com/golang/dep/cmd/dep;
+  fi
 
 install:
-- dep ensure -v -vendor-only
+- |
+  if [ "$DEP_ENABLED" = 1 ]; then
+    dep ensure -v -vendor-only;
+  fi
 
 script:
 - go list ./... | xargs golint -set_exit_status
-- |
-  if [ "$COVERAGE_ENABLED" = 1 ]; then
-    go test -coverprofile=coverage.txt -covermode=atomic ./...;
-  else
-    go test ./...;
-  fi
-
-after_success:
-- test "$COVERAGE_ENABLED" = 1 && bash <(curl -s https://codecov.io/bash)
+- go test -v ./...
