--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,8 +22,8 @@
 
 
 [[constraint]]
-  branch = "master"
   name = "github.com/newrelic/go-agent"
+  version = "^2.2"
 
 [[constraint]]
   name = "google.golang.org/grpc"
